     are prefixed by semicolons, to help people who like to use
     syntax highlighting in their ILISP buffer. (This patch
     was originally due to Raymond Toy.)
  ** The system now optimizes INTEGER-LENGTH better, thanks to more
     patches originally written by Raymond Toy.
  ** The compiler understands coercion between single-value and 
     multiple-VALUES type expressions better, getting rid of some very
     weird behavior, thanks to patches originally by Robert MacLachlan
     and Douglas Crosher.
  ** The system understands ANSI-style non-KEYWORD &KEY arguments in 
     lambda lists, thanks to a patch originally by Pierre Mai.
  ** The system no longer bogusly warns about "abbreviated type
     declarations".
  ** The compiler gets less confused by inlining and RETURN-FROM,
     thanks to some patches originally by Tim Moore.
  ** The system no longer hangs when dumping circular lists to fasl
     files, thanks to a patch originally from Douglas Crosher.
* Martin Atzmueller also fixed ROOM, so that it no longer fails with an
  undefined function error.
* gave up on fixing bug 3 (forbidden-by-ANSI warning for type mismatch
  in structure slot initforms) for now, wrote workaround instead:-|
* fixed bug 4 (no WARNING for DECLAIM FTYPE of slot accessor function)
* fixed bug 5: added stubs for various Gray stream functions called
  in the not-a-CL:STREAM case, so that even when Gray streams aren't
  installed, at least appropriate type errors are generated
* removed bug 21 from BUGS, since Martin Atzmueller points out that 
  it doesn't seem to affect SBCL after all

planned incompatible changes in 0.7.x:
* The debugger prompt sequence now goes "5]", "5[2]", "5[3]", etc.
  as you get deeper into recursive calls to the debugger command loop,
  instead of the old "5]", "5]]", "5]]]" sequence. (I was motivated
  to do this when ILISP and SBCL got into arguments which left me
  deeply nested in the debugger.)